// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`@/component/posters/as-figure.vue > Renders > A new poster 1`] = `
<figure
  class="poster"
  new_poster="[object Object]"
>
  <as-svg-stub
    as_avatar="false"
    focusable="false"
    itemid="/+14151234356/posters/1737178477987"
    show_cutout_layers="false"
    touch_uses_long_press="true"
  />
  <as-poster-symbol-stub
    itemid="/+14151234356/posters/1737178477987"
    show_cutout_symbols="false"
    shown="false"
  />
  <!--v-if-->
</figure>
`;

exports[`@/component/posters/as-figure.vue > Renders > A poster 1`] = `
<figure
  class="poster"
>
  <as-svg-stub
    as_avatar="false"
    focusable="false"
    itemid="/+14151234356/posters/1737178477987"
    show_cutout_layers="false"
    touch_uses_long_press="true"
  />
  <as-poster-symbol-stub
    itemid="/+14151234356/posters/1737178477987"
    show_cutout_symbols="false"
    shown="false"
  />
  <!--v-if-->
</figure>
`;
